--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "proxy": {
+    "/api": {
+      "target": "https://chatty-api-python.herokuapp.com",
+      "ws": false,
+      "changeOrigin": true
+    }
+  },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
     "pusher-js": "^4.3.1",
